# vgonio

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-THIRD-PARTY  NOTICE  README.md  THIRD-PARTY.md  _rust-toolchain.toml  build.rs  reflectance_air_to_glass_inv.csv  reflectance_dielectric_conductor.csv  reflectance_glass_to_air_inv.csv  requirements.txt  rountine_fit_results_2024-05-01_22-06-19.txt  rountine_fit_results_2024-05-02_20-13-17.txt  rust-toolchain.toml  rustfmt.toml  vgdev.sh  vgonio-user.toml  vgonio.toml
crates/bins/vgonio-plot/: Cargo.toml
crates/bins/vgonio-plot/src/: lib.rs  main.rs  utils.rs
crates/bins/vgonio-visu/: Cargo.toml
crates/bins/vgonio-visu/src/: display.rs  main.rs
crates/libs/vgonio-base/: Cargo.toml
crates/libs/vgonio-base/src/: bxdf.rs  lib.rs  medium.rs  partition.rs  utils.rs
crates/libs/vgonio-base/src/bxdf/: brdf.rs  distro.rs  fitting.rs
crates/libs/vgonio-base/src/optics/: fresnel.rs  ior.rs
crates/libs/vgonio-base/src/units/: angle.rs
crates/libs/vgonio-base/src/utils/: handle.rs
crates/libs/vgonio-bxdf/: Cargo.toml
crates/libs/vgonio-bxdf/src/: brdf.rs  distro.rs  fitting.rs  lib.rs
crates/libs/vgonio-bxdf/src/brdf/: lambert.rs  measured.rs
crates/libs/vgonio-bxdf/src/distro/: beckmann.rs  trowbridge_reitz.rs
crates/libs/vgonio-core/: Cargo.toml
crates/libs/vgonio-core/src/: config.rs  io.rs  lib.rs  math.rs  utils.rs
crates/libs/vgonio-core/src/bxdf/: brdf.rs  distro.rs  measured.rs  mod.rs  (+2 more)
crates/libs/vgonio-gxtk/: Cargo.toml
crates/libs/vgonio-gxtk/src/: buffers.rs  camera.rs  context.rs  lib.rs  mesh.rs  shadow_pass.rs
crates/libs/vgonio-pyplt/: Cargo.toml  build.rs
crates/libs/vgonio-pyplt/src/: lib.rs
crates/libs/vgonio-pyplt/vgplt/: brdf_fitting_non_interactive.py  pyplot.py
crates/libs/vgonio-surf/: Cargo.toml
crates/libs/vgonio-surf/src/: dcel.rs  gen.rs  io.rs  lib.rs
crates/libs/vgonio-uxtk/: Cargo.toml
crates/libs/vgonio-uxtk/src/: lib.rs
crates/vgonio/: Cargo.toml  build.rs
crates/vgonio-base/: Cargo.toml
crates/vgonio-base/src/: handle.rs  input.rs  io.rs  lib.rs  math.rs  medium.rs  optics.rs  partition.rs  range.rs
crates/vgonio-base/src/math/: axis.rs
crates/vgonio-base/src/optics/: fresnel.rs  ior.rs
crates/vgonio-base/src/units/: angle.rs  length.rs
crates/vgonio-bxdf/: Cargo.toml
crates/vgonio-bxdf/src/: brdf.rs  bsdf.rs  distro.rs  fitting.rs  lib.rs
crates/vgonio-bxdf/src/brdf/: analytical.rs  beckmann.rs  fitting.rs  lambert.rs  measured.rs  merl.rs  microfacet.rs  trowbridge_reitz.rs  utia.rs
crates/vgonio-bxdf/src/bsdf/: beckmann.rs  trowbridge_reitz.rs
crates/vgonio-bxdf/src/distro/: beckmann.rs  trowbridge_reitz.rs
crates/vgonio-comp/: Cargo.toml
crates/vgonio-comp/src/: fitting.rs  io.rs  lib.rs  main.rs  measure.rs  pyplot.rs
crates/vgonio-comp/src/app/: cache.rs  cli.rs  config.rs  gui.rs
crates/vgonio-comp/src/fitting/: brdf.rs  err.rs  mfd.rs
crates/vgonio-comp/src/measure/: bsdf.rs  mfd.rs
crates/vgonio-comp/src/pyplot/: pyplot.py  tone_mapping.py
crates/vgonio-gfxkit/: Cargo.toml
crates/vgonio-gfxkit/src/: context.rs  lib.rs  mesh.rs  render_pass.rs  shadow_pass.rs
crates/vgonio-surf/: Cargo.toml  pyproject.toml
crates/vgonio-surf/src/: dcel.rs  gen.rs  io.rs  lib.rs  smooth.rs  subdivision.rs
crates/vgonio-surf/src/smooth/: cpnt.rs
crates/vgonio-surf/src/subdivision/: curved.rs  wiggle.rs
crates/vgonio-uxtk/: Cargo.toml
crates/vgonio-uxtk/src/: renderer.rs  theme.rs
crates/vgonio-uxtk/src/widgets/: angle_knob.rs  surface_selector.rs  toggle_switch.rs
crates/vgonio-view/: Cargo.toml  index.html
crates/vgonio-view/assets/: manifest.json  sw.js
crates/vgonio-view/src/: app.rs  dock.rs  init.mjs  lib.rs  main.rs
crates/vgonio-visu/: Cargo.toml
crates/vgonio-visu/src/: camera.rs  display.rs  hit.rs  image.rs  lib.rs  main.rs  material.rs  random.rs  ray.rs  sphere.rs
crates/vgonio-wgut/: Cargo.toml
crates/vgonio-wgut/src/: camera.rs  context.rs  mesh.rs  render_pass.rs  shadow_pass.rs
crates/vgonio/src/: app.rs  error.rs  fitting.rs  io.rs  lib.rs  main.rs  measure.rs  optics.rs  partition.rs  plotting.rs  pyplot.rs  range.rs
crates/vgonio/src/app/: args.rs  cache.rs  cli.rs  config.rs  gui.rs
crates/vgonio/src/fitting/: brdf.rs  bsdf.rs  err.rs  mdf.rs  mfd.rs  mse.rs
crates/vgonio/src/measure/: bsdf.rs  data.rs  microfacet.rs  params.rs
crates/vgonio/src/optics/: fresnel.rs  ior.rs
crates/vgonio/src/pyplot/: cmds.md  pyplot.py  tone_mapping.py
vgonio/: Cargo.toml
vgonio-core/: Cargo.toml
vgonio-core/src/: error.rs  io.rs  lib.rs  math.rs  units.rs
vgonio-core/src/math/: aabb.rs  axis.rs
vgonio-core/src/units/: angle.rs  length.rs  solid_angle.rs
vgonio-msurf/: Cargo.toml
vgonio-msurf/src/: io.rs  lib.rs
vgonio-surf/: Cargo.toml
vgonio-surf/src/: gen.rs  io.rs  lib.rs
vgonio/src/: app.rs  error.rs  fitting.rs  io.rs  lib.rs  measure.rs  msurf.rs  partition.rs  range.rs
vgonio/src/app/: args.rs  cache.rs  cli.rs  gfx.rs  gui.rs
vgonio/src/app/cli/: cmd_convert.rs  cmd_generate.rs  cmd_info.rs  cmd_measure.rs  info.rs
vgonio/src/app/gfx/: buffers.rs  camera.rs  context.rs  grid.rs  mesh.rs  shadow_pass.rs  texture.rs
vgonio/src/app/gui/: bsdf_viewer.rs  data.rs  docking.rs  event.rs  file_drag_drop.rs  file_drop.rs  gizmo.rs  icons.rs  measurement.rs  misc.rs  notify.rs  outliner.rs  plotter.rs  prop_insp.rs  prop_inspector.rs  simulations.rs  state.rs  surf_viewer.rs  theme.rs  tools.rs  ui.rs  visual_grid.rs
vgonio/src/fitting/: beckmann_spizzichino.rs  madf.rs  mdf.rs  microfacet_distribution.rs  mmsf.rs  mndf.rs  trowbridge_reitz.rs
vgonio/src/measure/: bsdf.rs  collector.rs  data.rs  emitter.rs  fetcher.rs  measurement.rs  microfacet.rs  params.rs  rtc.rs
vgonio/src/measure/bsdf/: detector.rs  emitter.rs  params.rs  receiver.rs  rtc.rs
vgonio/src/measure/microfacet/: adf.rs  distribution.rs  msf.rs  params.rs  sdf.rs  visibility.rs  visibility.wgsl
vgonio/src/measure/rtc/: embr.rs  grid.rs  triangle.rs
vgonio/src/optics/: fresnel.rs  ior.rs
(+645 files in other folders)
