[workspace]
members = ["vgonio", "vgonio-core", "vgonio-surf"]
resolver = "2"

[workspace.package]
authors = ["Yang Chen <y.chen-14@tudelft.nl>"]
edition = "2021"
version = "0.3.0"

[workspace.dependencies]
ahash = "0.8"
byteorder = "1.4"
cfg-if = "1.0"
clap = { version = "4", features = ["derive"] }
embree = { git = "https://github.com/matthiascy/embree-rs.git", branch = "own" }
flate2 = "1.0"
glam = { version = "0.23", features = ["serde", "bytemuck"] }
log = "0.4"
paste = "1.0"
proptest = "1.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
static_assertions = "1.1"
uuid = { version = "1.2", features = ["serde", "v4"] }
tobj = "4.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = true

[profile.release.build-override]
opt-level = 3
codegen-units = 16