[workspace]
resolver = "2"
members = [
    "crates/vgonio",
    "crates/vgonio-base",
    "crates/vgonio-bxdf",
    "crates/vgonio-jabr",
    "crates/vgonio-surf",
    "crates/vgonio-visu",
    "crates/vgonio-gfxkit",
    "crates/vgonio-uikit"
]

[workspace.package]
authors = ["Yang Chen <y.chen-14@tudelft.nl>"]
edition = "2021"
version = "0.3.1"

[workspace.dependencies]
ahash = "0.8"
approx = "0.5"
bincode = "1"
bytemuck = { version = "1.12", features = ["derive"] }
byteorder = "1.4"
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "~4", features = ["derive", "wrap_help"] }
csv = "1"
dirs = "5.0"
egui = { version = "~0.28", features = ["bytemuck"] }
egui_dock = { version = "~0.13" }
egui_extras = { version = "~0.28", features = ["all_loaders"] }
egui-winit = { version = "~0.28" }
egui-gizmo = { git = "https://github.com/matthiascy/egui-gizmo.git", branch = "own" }
egui_plot = "~0.28"
egui-toast = { git = "https://github.com/matthiascy/egui-toast.git", branch = "main" }
env_logger = "~0.11"
embree = { git = "https://github.com/matthiascy/embree-rs.git", branch = "own" }
exr = { git = "https://github.com/matthiascy/exr.git", branch = "main" }
flate2 = { version = "~1.0", features = ["zlib-ng-compat"], default-features = false }
futures-intrusive = "0.5"
glam = { version = "~0.28", features = ["serde", "bytemuck"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
levenberg-marquardt = "0.13"
nalgebra = "0.32"
libm = "0.2"
log = "0.4"
num-traits = "0.2"
numpy = "0.21"
paste = "1.0"
pollster = "0.3"
proptest = "1.0"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
rand = "0.8"
rayon = "1.9"
rfd = { version = "0.14", features = ["file-handle-inner"] }
rand_distr = "0.4"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
static_assertions = "1.1"
tobj = "4.0"
toml = "0.8"
type-map = "0.5"
uuid = { version = "1.2", features = ["serde", "v4"] }
winit = "~0.29"
wgpu = { version = "0.20", features = ["spirv"] }


[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = "fat"

[profile.rel-with-dbg-info]
inherits = "release"
strip = "none"
debug = "full"

[profile.release.build-override]
opt-level = 3
codegen-units = 16
