[workspace]
resolver = "2"
members = ["crates/bins/*", "crates/libs/*"]

[workspace.package]
authors = ["Yang Chen <matthiasychen@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE-APACHE"
version = "0.3.2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = "fat"

[profile.rel-with-dbg-info]
inherits = "release"
strip = "none"
debug = "full"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
approx = "0.5"
bincode = "1"
bytemuck = { version = "1.12", features = ["derive"] }
byteorder = "1.4"
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "~4", features = ["derive", "wrap_help"] }
csv = "1"
cxx = "1.0"
dirs = "5.0"
egui = { version = "~0.29", features = [
    "bytemuck",
    "rayon",
    "puffin",
    "log",
    "callstack",
] }
egui_dock = { version = "~0.14" }
egui_extras = { version = "~0.29", features = ["all_loaders"] }
egui-winit = { version = "~0.29" }
egui-gizmo = { git = "https://github.com/matthiascy/egui-gizmo.git", branch = "own" }
egui_plot = "~0.29"
egui-file-dialog = "0.7"
egui_tiles = "0.10"
egui-toast = { git = "https://github.com/matthiascy/egui-toast.git", branch = "main" }
env_logger = "~0.11"
embree = { git = "https://github.com/matthiascy/embree-rs.git", branch = "own" }
exr = { git = "https://github.com/matthiascy/exr.git", branch = "main" }
flate2 = { version = "~1.0", features = [
    "zlib-ng-compat",
], default-features = false }
futures-intrusive = "0.5"
glam = { version = "~0.28", features = ["serde", "bytemuck"] }
image = { version = "0.25", default-features = false, features = ["png"] }
indicatif = { version = "0.17", features = ["rayon"] }
lazy_static = "1.5"
levenberg-marquardt = "0.14"
nalgebra = "0.33"
libm = "0.2"
log = "0.4"
num-traits = "0.2"
numpy = "0.23"
paste = "1.0"
pollster = "0.3"
proptest = "1.0"
puffin = "~0.19"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
rand = "0.8"
rayon = "1.9"
rand_distr = "0.4"
rand_chacha = "0.3"
nohash-hasher = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.2"
serde_yaml = "0.9"
static_assertions = "1.1"
thiserror = "2.0"
tobj = "4.0"
toml = "0.8"
type-map = "0.5"
uuid = { version = "1.2", features = ["serde", "v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
which = "4.4"
winit = "~0.30"
wgpu = { version = "22", features = ["wgsl"] }
vgonio-core = { path = "crates/libs/vgonio-core" }
vgonio-surf = { path = "crates/libs/vgonio-surf" }

vgonio-jabr = { path = "crates/libs/vgonio-jabr" }
vgonio-powitacq = { path = "crates/libs/vgonio-powitacq" }
vgonio-gxtk = { path = "crates/libs/vgonio-gxtk" }

[workspace.lints.clippy]
missing_docs = "warn"
unused_crate_dependencies = "warn"
