[package]
name = "vgonio-core"
description = "Core types, traits, and functionalities for vgonio"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
cfg-if.workspace = true
clap.workspace = true
glam.workspace = true
num-traits.workspace = true
paste.workspace = true
serde.workspace = true
approx.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_yaml.workspace = true
