[package]
name = "vgonio-surf"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Library for manipulating, reading and writing micro-surfaces."

[features]
default = []
embree = ["dep:embree"]

[dependencies]
byteorder.workspace = true
clap.workspace = true
flate2.workspace = true
glam.workspace = true
log.workspace = true
serde.workspace = true
uuid.workspace = true
embree = { workspace = true, optional = true }
vgcore = { package = "vgonio-core", path = "../vgonio-core" }