[package]
name = "vgonio-surf"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Library for manipulating, reading and writing micro-surfaces."

[features]
default = []
bench = []
embree = ["dep:embree"]
surf-gen = []
surf-obj = ["dep:tobj", "dep:ahash"]

[dependencies]
ahash = { workspace = true, optional = true }
byteorder.workspace = true
clap.workspace = true
flate2.workspace = true
glam.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
tobj = { workspace = true, optional = true }
uuid.workspace = true
embree = { workspace = true, optional = true }
vgcore = { package = "vgonio-core", path = "../vgonio-core" }