[package]
name = "vgonio"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"
description = "Microscopic level light transport simulation."
publish = false

[features]
default = []
embree = ["dep:embree"]
optix = []
verbose_debug = []

[dependencies]
approx = "0.5"
bincode = "1"
bytemuck = { version = "1.12", features = ["derive"] }
chrono = "0.4"
csv = "1"
dirs = "5.0"
egui = { version = "0.22", features = ["bytemuck"] }
egui_extras = "0.22"
egui-winit = { version = "0.22", default-features = false }
egui-gizmo = { git = "https://github.com/matthiascy/egui-gizmo.git", branch = "own" }
egui-toast = "0.8"
embree = { git = "https://github.com/matthiascy/embree-rs.git", branch = "own", optional = true}
env_logger = "0.10"
futures-intrusive = "0.5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
pollster = "0.3"
rfd = { version = "0.11", features = ["file-handle-inner"] }
rayon = "1.6"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.7"
type-map = "0.5"
winit = "0.28"
wgpu = { version = "0.16", features = ["spirv"] }
vgonio-msurf = { path = "../vgonio-msurf" }
vgonio-core = { path = "../vgonio-core" }

[build-dependencies]
shaderc = "0.8"

[dev-dependencies]
proptest = "1"

#[profile.dev]
#split-debuginfo = "unpacked"

#[profile.dev.build-override]
#opt-level = 3

#[profile.release]
#strip = "debuginfo"
#lto = true
# debug = true

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
#[profile.release.build-override]
#opt-level = 3
#codegen-units = 16
