[package]
name = "vgonio"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"
description = "Microscopic level light transport simulation."
publish = false

[features]
default = []
embree = ["dep:embree", "vgsurf/embree"]
optix = []
bench = ["vgsurf/bench"]
surf-obj = ["vgsurf/surf-obj"]
surf-gen = ["vgsurf/surf-gen"]
visu-dbg = []
verbose-dbg = []

[dependencies]
chrono.workspace = true
clap.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui_extras.workspace = true
egui-winit.workspace = true
egui-gizmo.workspace = true
egui_plot.workspace = true
egui-toast.workspace = true
env_logger.workspace = true
embree = { workspace = true, optional = true }
exr.workspace = true
flate2.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true
static_assertions.workspace = true
uuid.workspace = true
approx = "0.5"
bincode = "1"
bytemuck = { version = "1.12", features = ["derive"] }
csv = "1"
dirs = "5.0"
futures-intrusive = "0.5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
levenberg-marquardt = "0.13"
nalgebra = "0.32"
numpy = "0.20"
pollster = "0.3"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
rfd = { version = "0.12", features = ["file-handle-inner"] }
rand_distr = "0.4"
rand_chacha = "0.3"
serde_json = "1.0"
toml = "0.8"
type-map = "0.5"
winit.workspace = true
wgpu.workspace = true
vgsurf = { package = "vgonio-surf", path = "../vgonio-surf" }
vgcore = { package = "vgonio-core", path = "../vgonio-core" }
vgbxdf = { package = "vgonio-bxdf", path = "../vgonio-bxdf" }
vgwgpu = { package = "vgonio-wgpu", path = "../vgonio-wgpu" }

[build-dependencies]
shaderc = "0.8"
