[package]
name = "vgonio-base"
description = "Core types, traits, and functionalities for vgonio"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = []
use_f64 = []
cli = ["dep:clap"]
io = []
winit = ["dep:winit"]


[dependencies]
approx.workspace = true
byteorder.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
flate2.workspace = true
glam.workspace = true
log.workspace = true
num-traits.workspace = true
paste.workspace = true
serde.workspace = true
winit = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
serde_yaml.workspace = true
