[package]
name = "vgonio-bxdf"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = []
exr = ["dep:exr", "dep:chrono"]
fitting = []
cli = ["dep:clap"]

[dependencies]
chrono = { workspace = true, optional = true }
exr = { workspace = true, optional = true }
libm.workspace = true
num-traits.workspace = true
log.workspace = true
base = { package = "vgonio-base", path = "../vgonio-base" }
clap = { workspace = true, optional = true }
jabr = { package = "vgonio-jabr", path = "../vgonio-jabr" }
