[package]
name = "vgonio-bxdf"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["io"]
exr = ["dep:exr", "dep:chrono"]
fitting = []
cli = ["dep:clap"]
io = ["dep:serde_json", "dep:serde-pickle"]

[dependencies]
chrono = { workspace = true, optional = true }
exr = { workspace = true, optional = true }
libm.workspace = true
num-traits.workspace = true
log.workspace = true
serde_json = { workspace = true, optional = true }
serde-pickle = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
base = { package = "vgonio-base", path = "../vgonio-base" }
jabr = { package = "vgonio-jabr", path = "../vgonio-jabr" }
powitacq = { package = "vgonio-powitacq", path = "../vgonio-powitacq" }
