[package]
name = "vgonio-comp"
authors.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
version.workspace = true

[features]
default = ["dep:embree"]
embree = ["dep:embree", "surf/embree"]
optix = []
bench = ["surf/bench"]
fitting = ["bxdf/fitting"]
surf-obj = ["surf/surf-obj"]
surf-gen = ["surf/surf-gen"]
vdbg = []
vvdbg = []

[dependencies]
chrono.workspace = true
clap.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui_extras.workspace = true
egui-file-dialog.workspace = true
egui-winit.workspace = true
egui-gizmo.workspace = true
egui_plot.workspace = true
egui-toast.workspace = true
embree = { workspace = true, optional = true }
env_logger.workspace = true
exr.workspace = true
flate2.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
approx.workspace = true
bincode.workspace = true
bytemuck.workspace = true
dirs.workspace = true
futures-intrusive.workspace = true
image.workspace = true
levenberg-marquardt.workspace = true
numpy.workspace = true
nalgebra.workspace = true
pollster.workspace = true
pyo3.workspace = true
rand_chacha.workspace = true
static_assertions.workspace = true
toml.workspace = true
type-map.workspace = true
winit.workspace = true
wgpu.workspace = true
surf = { package = "vgonio-surf", path = "../vgonio-surf", features = ["exr"] }
base = { package = "vgonio-base", path = "../vgonio-base", features = ["cli", "winit", "io"] }
bxdf = { package = "vgonio-bxdf", path = "../vgonio-bxdf", features = ["cli", "exr"] }
jabr = { package = "vgonio-jabr", path = "../vgonio-jabr" }
gxtk = { package = "vgonio-gxtk", path = "../vgonio-gxtk" }
uxtk = { package = "vgonio-uxtk", path = "../vgonio-uxtk" }

[lints]
workspace = true
