[package]
name = "vgonio-view"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui.workspace = true
eframe.workspace = true
log.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
