[package]
name = "vgonio-view"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui.workspace = true
egui_dock.workspace = true
egui_tiles.workspace = true
log.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "x11",
    "wayland",
    "persistence",
] }
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
uuid = { workspace = true, features = ["v4", "js"] }
