[package]
name = "vgonio-visu"
authors.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
rand.workspace = true
rayon.workspace = true
image.workspace = true
jabr = { package = "vgonio-jabr", path = "../vgonio-jabr" }
