[package]
name = "vgonio"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Microscopic level light transport simulation."
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = []
compute = ["dep:comp"]
viewer = ["viewer_native", "viewer_web"]
viewer_native = []
viewer_web = ["dep:view"]

[dependencies]
view = { package = "vgonio-view", path = "../vgonio-view", optional = true }
comp = { package = "vgonio-comp", path = "../vgonio-comp", optional = true }
