[package]
name = "vgonio-plot"
authors.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
surface = ["dep:vgonio-surf"]

[dependencies]
clap.workspace = true
env_logger.workspace = true
exr.workspace = true
log.workspace = true
vgonio-core = { workspace = true, features = ["cli", "config"] }
vgonio-bxdf = { path = "../../libs/vgonio-bxdf" }
vgonio-surf = { path = "../../libs/vgonio-surf", optional = true }
