[package]
name = "vgonio-visu"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = []
## Enable the doulbe precision arithmetic
f64 = []

[dependencies]
clap.workspace = true
rand.workspace = true
rayon.workspace = true
image.workspace = true
jabr = { package = "vgonio-jabr", path = "../../libs/vgonio-jabr" }
gxtk = { package = "vgonio-gxtk", path = "../../libs/vgonio-gxtk" }
pollster.workspace = true
winit.workspace = true
wgpu.workspace = true
