[package]
name = "vgonio-base"
description = "Core types, traits, and functionalities for vgonio"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = []
use_f64 = []
cli = ["dep:clap"]
io = ["dep:csv", "dep:exr"]
winit = ["dep:winit"]
bxdf = ["dep:rayon"]
bxdf_io = ["dep:serde_json", "dep:serde-pickle", "dep:exr"]
bxdf_fit = ["dep:levenberg-marquardt", "dep:nalgebra"]


[dependencies]
approx.workspace = true
byteorder.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
exr = { workspace = true, optional = true }
flate2.workspace = true
glam.workspace = true
log.workspace = true
num-traits.workspace = true
paste.workspace = true
serde.workspace = true
static_assertions.workspace = true
uuid.workspace = true
winit = { workspace = true, optional = true }

# dependencies required by bxdf or bxdf_fit
levenberg-marquardt = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
libm.workspace = true
rayon = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde-pickle = { workspace = true, optional = true }
jabr = { package = "vgonio-jabr", path = "../../libs/vgonio-jabr" }
powitacq = { package = "vgonio-powitacq", path = "../../libs/vgonio-powitacq" }


[dev-dependencies]
proptest.workspace = true
serde_yaml.workspace = true
