[package]
name = "vgonio-bxdf"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["io", "fitting"]
exr = ["dep:exr", "dep:chrono"]
fitting = ["dep:rayon", "dep:levenberg-marquardt", "dep:nalgebra"]
cli = ["dep:clap"]
io = ["dep:serde_json", "dep:serde-pickle"]

[dependencies]
chrono = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
exr = { workspace = true, optional = true }
levenberg-marquardt = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
libm.workspace = true
log.workspace = true
num-traits.workspace = true
rayon = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde-pickle = { workspace = true, optional = true }
base = { package = "vgonio-base", path = "../../libs/vgonio-base" }
jabr = { package = "vgonio-jabr", path = "../../libs/vgonio-jabr" }
powitacq = { package = "vgonio-powitacq", path = "../../libs/vgonio-powitacq" }
