[package]
name = "vgonio-core"
description = "Core types, traits, and functionalities for vgonio"
authors.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = []
use_f64 = []
pybind = ["dep:pyo3"]
config = ["dep:dirs", "dep:toml", "serde"]
cli = ["dep:clap", "dep:env_logger"]
io = ["dep:exr"]
winit = ["dep:winit"]
serde = ["dep:serde"]
fitting_api = ["bxdf_fitting_api", "mdf_fitting_api"]
bxdf_fitting_api = []
mdf_fitting_api = []


[dependencies]
approx.workspace = true
byteorder.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
csv = { workspace = true }
dirs = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
exr = { workspace = true, optional = true }
flate2.workspace = true
glam.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
log.workspace = true
num-traits.workspace = true
paste.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
toml = { workspace = true, optional = true }
static_assertions.workspace = true
uuid.workspace = true
winit = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true, features = ["extension-module"] }
vgonio_jabr = { package = "vgonio-jabr", path = "../vgonio-jabr" }

[dev-dependencies]
proptest.workspace = true
serde_yaml.workspace = true
env_logger.workspace = true
