[package]
name = "vgonio-pyplt"
authors.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
version.workspace = true

[features]
default = []
surface = ["dep:vgonio-surf"]

[dependencies]
exr = { workspace = true }
numpy.workspace = true
pyo3.workspace = true
log.workspace = true
vgonio-core = { path = "../../libs/vgonio-core" }
vgonio-jabr = { path = "../../libs/vgonio-jabr" }
vgonio-bxdf = { path = "../../libs/vgonio-bxdf" }
vgonio-surf = { path = "../../libs/vgonio-surf", optional = true }

[lints]
workspace = true
