[package]
name = "vgonio-surf"
version = "0.1.0"
authors = ["Yang Chen <y.chen-14@tudelft.nl>"]
edition = "2021"
description = "Library for manipulating, reading and writing micro-surfaces."

[features]
default = []
bench = []
embree = ["dep:embree"]
surf-gen = []
surf-obj = ["dep:tobj", "dep:ahash"]
exr = ["dep:exr"]
pybind = ["dep:pyo3"]

[lib]
name = "vgonio_surf"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { workspace = true, optional = true }
byteorder.workspace = true
chrono.workspace = true
clap.workspace = true
exr = { workspace = true, optional = true }
flate2.workspace = true
glam.workspace = true
log.workspace = true
nohash-hasher.workspace = true
pyo3 = { workspace = true, optional = true, features = ["extension-module"] }
rand.workspace = true
rayon.workspace = true
serde.workspace = true
tobj = { workspace = true, optional = true }
uuid.workspace = true
embree = { workspace = true, optional = true }
vgonio_core = { package = "vgonio-core", path = "../vgonio-core" }
